fix: search modal overflow

--- a/src/generators/web/ui/index.css
+++ b/src/generators/web/ui/index.css
@@ -73,18 +73,3 @@ main {
     }
   }
 }
-
-#modalContent li > div > a {
-  max-width: 42rem;
-  > svg {
-    flex-shrink: 0;
-  }
-  > div {
-    min-width: 0;
-    > p {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-  }
-}
